<resources>
    <string name="app_name">MGCharge</string>
    <string name="device_name"><b>Shelly Plug</b></string>
    <string name="connected">connected</string>
    <string name="unconnected">not connected</string>
    <string name="switch_on"><b>Automatic Switch On</b></string>
    <string name="switch_off"><b>Automatic Switch Off</b></string>
    <string name="switch_direct"><b>Switch Direct</b></string>

    <string name="devices">Devices</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>

    <string name="battery_value">%d%%</string>
    <string name="battery_level_dialog_title">Set the battery level for automatic switch %s</string>
    <string name="selected_device">Selected device</string>
    <string name="based_on_battery_percent">based on battery percent:</string>
    <string name="based_on_time">based on time</string>
    <string name="default_on_time">05:00</string>
    <string name="default_off_time">08:00</string>
    <string name="switch_directly_on_off">Switch directly on/off</string>
    <string name="switch_active_on_off">Switch active on/off</string>
    <string name="devices_device_id">Device Id</string>
    <string name="devices_device_name">Device name</string>
    <string name="devices_ip_address">IP address</string>
    <string name="devices_username">Username</string>
    <string name="devices_password">Password</string>
    <string name="devices_ok">OK</string>
    <string name="devices_new_device">new Device</string>
    <string name="devices_delete_device">delete Device</string>
    <string name="devices_devices">Devices</string>
    <string name="level_dialog_ok">OK</string>
    <string name="level_dialog_abort">ABORT</string>
    <string name="app_version">Version 0.3</string>
    <string name="unique_work_name">MGCharge_unique_work_name_01234</string>

    <string-array name="rangeSliderValues" >
    <item>20</item>
    <item>70</item>
    </string-array>
</resources>