<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



    <TextView
        android:id="@+id/device_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"

        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/selected_device"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devices_device_id"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devices_device_name"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/devices_ip_address"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/devices_username"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/devices_password"
                android:textSize="16sp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/editDevice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginEnd="5dp"
                android:enabled="false"  />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                />

            <EditText
                android:id="@+id/editIpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"
                />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                />

            <Button
                android:id="@+id/editOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/devices_ok"

                android:padding="1dp"
                android:layout_margin="1dp"
                />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/devices_list_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"

        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/devices_devices"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/devices_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="40"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices_new_device"
            android:textSize="16sp"

            android:layout_margin="10dp"
            android:padding="10dp"
            />
        <Button
            android:id="@+id/delete_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices_delete_device"
            android:textSize="16sp"

            android:layout_margin="10dp"
            android:padding="10dp"
            />

    </LinearLayout>

</LinearLayout>