<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MGChargeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/device"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/device_name"
        android:textAlignment="center"
        android:textSize="48sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/unconnected"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:text="@string/switch_on"
                style="@style/headStyle">
            </TextView>

            <mg.charge.view.MyRadioGroup
                android:id="@+id/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/on1"
                    style="@style/rbStyle"
                    android:enabled="false"
                    android:text="@string/based_on_battery_percent"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/on2"
                    style="@style/rbStyle"
                    android:enabled="false"
                    android:text="@string/based_on_time"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </mg.charge.view.MyRadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="30"
            android:layout_margin="10dp">

            <mg.charge.view.MyCheck
                android:id="@+id/onCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            <mg.charge.view.BatteryTextView
                android:id="@+id/onBattery"
                style="@style/valueStyle" />
            <TextView
                android:id="@+id/onTime"
                style="@style/valueStyle"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:text="@string/switch_off"
                style="@style/headStyle">
            </TextView>

            <mg.charge.view.MyRadioGroup
                android:id="@+id/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/off1"
                    android:text="@string/based_on_battery_percent"
                    style="@style/rbStyle"
                    android:enabled="false"
                    />
                <RadioButton
                    android:id="@+id/off2"
                    android:text="@string/based_on_time"
                    style="@style/rbStyle"
                    android:enabled="false"
                    />
            </mg.charge.view.MyRadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="30"
            android:layout_margin="10dp">

            <mg.charge.view.MyCheck
                android:id="@+id/offCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck" />
            <mg.charge.view.BatteryTextView
                android:id="@+id/offBattery"
                style="@style/valueStyle" />
            <TextView
                android:id="@+id/offTime"
                style="@style/valueStyle"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:id="@+id/directHead"
                android:text="@string/switch_direct"
                style="@style/headStyle">
            </TextView>
            <TextView
                android:id="@+id/targetStateDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="29dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/switch_directly_on_off"
                android:enabled="false"
                />
            <TextView
                android:id="@+id/isActiveDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="29dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="9dp"
                android:text="@string/switch_active_on_off"
                android:enabled="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="30"
            android:layout_margin="10dp">

            <mg.charge.view.MyCheck
                android:id="@+id/directCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck" />

            <mg.charge.view.MySwitch
                android:id="@+id/targetState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:text=""
                tools:ignore="SpeakableTextPresentCheck" />
            <mg.charge.view.MySwitch
                android:id="@+id/isActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="9dp"
                android:enabled="false"
                android:text=""
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>


    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>